--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <div class="container">
             <div class="row">
                 <div class="col-lg-12">
-                    <img class="img-responsive" src="https://www.sow.org.tw//sites/sow/files/vigor_logo.png" alt="">
+                    <img class="img-responsive" src="https://www.sow.org.tw//sites/sow/files/vigor_logo.png" alt="SOW">
                     <div class="intro-text">
                         <span class="name">淨化心靈 珍愛地球</span>
                         <!--                        <hr class="star-light">-->
@@ -116,7 +116,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="mission">
                         <li>自然教育推廣。</li>
                         <li>兒童親子培育。</li>
@@ -141,7 +141,7 @@
                 </div>
             </div>
             <div class="row">
-                <div class="col-lg-4 col-lg-offset-2">
+                <div class="col-lg-8 col-lg-offset-2">
                     <div class="mission">
                         <li>保存台灣天然的物種。</li>
                         <li>讓野地能依自然法則演替。</li>
@@ -160,12 +160,12 @@
         <div class="footer-above">
             <div class="container">
                 <div class="row">
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-6">
                         <h3>關於荒野</h3>
                         <p>Taipei 中正區詔安街204號
                             <br>02 2307 1568</p>
                     </div>
-                    <div class="footer-col col-md-4">
+                    <div class="footer-col col-md-6">
                         <h3>網站連結</h3>
                         <ul class="list-inline">
                             <li>
@@ -179,6 +179,7 @@
                             </li>
                         </ul>
                     </div>
+<div class="top"> <a href="#">top</a></div>
 <!--
                     <div class="footer-col col-md-4">
                         <h3>About Freelancer</h3>
